# rt2

./: .gitignore  .travis.yml  Cargo.toml  README.md
doc/: raytacer-c++-example.cpp  todo
res/scenes/: default_scene.rts
rt/: Cargo.toml
rt/src/: camera.rs  geometry.rs  lib.rs  light.rs  main.rs  material.rs  raytracer.rs
src/: animation.rs  app.rs  camera.rs  font.rs  fps_counter.rs  geometry.rs  input.rs  light.rs  main.rs  material.rs  math.rs  object.rs  raytracer.rs  resource.rs  scene.ron  scene.rs  scene_generator.rs  surface.rs
