[package]
name = "rt"
version = "0.1.0"
authors = ["alex-eg <alexey.e.egorov@gmail.com>"]
edition = "2018"

[dependencies]
num_cpus = "1.8.0"
num = "0.1.40"
gl = "0.6.3"
nalgebra = "0.13.1"
scoped_threadpool = "0.1.*"
time = "0.1.40"
serde = { version = "1.0", features = ["derive"] }

[dependencies.sdl2]
version = "0.31.0"
default-features = false
features = ["ttf"]
