[package]
name = "rt"
version = "0.1.1"
authors = ["alex-eg <alexey.e.egorov@gmail.com>"]

[dependencies]
num_cpus = "*"
num = "*"
gl = "*"
num-traits = "*"
nalgebra = { version = ">0.27.0", features = ["serde-serialize"] }
scoped_threadpool = "*"
serde = { version = "*", features = ["derive"] }
erased-serde = "*"
ron = "*"

[dependencies.sdl2]
version = "*"
default-features = false
features = ["ttf"]
